[tool.poetry]
name = "graia-component-selector"
version = "0.0.4"
description = ""
authors = ["GreyElaina <GreyElaina@outlook.com>"]
license = "MIT"
packages = [
    { include = "graia", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
graia-application-mirai = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
